--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <script src="app.js"></script>
 </head>
 <body>
-    <button onclick="fireBluetooth()">Click Me!</button>
+    <button style="font-size: 25px" onclick="fireBluetooth()">Click Me!</button>
 </body>
 </html>
