--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <button style="font-size: 25px" onclick="fireBluetooth()">Click Me!</button>
+    <p id="info"></p>
 </body>
 </html>
